prevent invisible welcome screen from being dragged

--- a/main.css
+++ b/main.css
@@ -545,6 +545,7 @@ html {
   opacity: 0;
   z-index: 0;
   pointer-events: none;
+  -webkit-app-region: no-drag;
 }
 #intro_window > * {
   -webkit-app-region: no-drag;
